Fix bug where tours and tourTypes XHR were loaded twice.

--- a/travel-spa/views/index.html
+++ b/travel-spa/views/index.html
@@ -126,11 +126,9 @@
 
 <section class="overlay-container">
 
-  <video loop muted autoplay src="{{ videoMe.video | trustUrl }}" style="opacity: 0.8;">
+  <video loop muted  src="{{ videoMe.video | trustUrl }}" style="opacity: 0.8;">
       Your browser does not support the video tag.
   </video>
-
-
 
   <div class="overlay-title">
     <h1>{{ videoMe.name | spaceless }}</h1>
