--- a/travel-spa/views/tour-type.html
+++ b/travel-spa/views/tour-type.html
@@ -1,22 +1,22 @@
 <script>
   /*console.log($routeParams.id)*/
 </script>
-<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 repeated-item" ng-repeat="xy in related">
+<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 repeated-item" ng-repeat="tour in tours">
   <div class="thumbnail destination-card " style="background-color:#141414;">
     <div class="hovereffect">
       <!-- <img  src="http://localhost:8080/magnoliaAuthor/dam/{{ location.image }}/image.png" > -->
-      <div class="sayWhat destination-images" style="background-image:url({{SCOPE_HOST}}/dam/{{ xy.image }})">
+      <div class="sayWhat destination-images" style="background-image:url({{SCOPE_HOST}}/dam/{{ tour.image }})">
         <div class="caption" id="destination-text">
           <br>
           <p>
-            <br> {{ xy.description}}
-            <br> Days : {{ xy.duration }}
-            <br> Location : {{ xy.location }}
+            <br> {{ tour.description}}
+            <br> {{ tour.duration }} Days
+            <br> {{ tour.location }}
           </p>
         </div>
       </div>
       <div class="overlay">
-        <a ng-href="#/detail/{{xy['@path']}}" class="info" style="text-transform:uppercase;">
+        <a ng-href="#/detail/{{tour['@path']}}" class="info" style="text-transform:uppercase;">
 
             Discover
         </a>
