--- a/travel-spa/views/index.html
+++ b/travel-spa/views/index.html
@@ -122,7 +122,7 @@
 
 <section class="overlay-container">
 
-  <video loop muted  src="{{ videoMe.video | trustUrl }}" style="opacity: 0.8;">
+  <video loop muted autoplay  src="{{ videoMe.video | trustUrl }}" style="opacity: 0.8;">
       Your browser does not support the video tag.
   </video>
 
